Se movieron las imagenes (Pueva)"

--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -128,11 +128,11 @@
             <CENTER>
                 <div class="Animacion">
                   <ul>
-                    <li><img src="imagenes/CIEN.jpg" alt="CIENCIA"></li>
-                    <li><img src="imagenes/CUL.jpg" alt="CULTURA"></li>
-                    <li><img src="imagenes/ENT.jpg" alt="ENTRETENIMIENTO"></li>
-                    <li><img src="imagenes/TEC.jpg" alt="TECNOLOGIA"></li>
-                    <li><img src="imagenes/ECO.jpg" alt="ECONOMIA"></li>
+                    <li><img src="CIEN.jpg" alt="CIENCIA"></li>
+                    <li><img src="CUL.jpg" alt="CULTURA"></li>
+                    <li><img src="ENT.jpg" alt="ENTRETENIMIENTO"></li>
+                    <li><img src="TEC.jpg" alt="TECNOLOGIA"></li>
+                    <li><img src="Imagenes/ECO.jpg" alt="ECONOMIA"></li>
                   </ul>
                 </div>
             </CENTER>
