--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -129,7 +129,7 @@
                 <div class="Animacion">
                   <ul>
                     <li><img src="CIEN.jpg" alt="CIENCIA"></li>
-                    <li><img src="CUL.jpg" alt="CULTURA"></li>
+                    <li><img src="CUL.png" alt="CULTURA"></li>
                     <li><img src="ENT.jpg" alt="ENTRETENIMIENTO"></li>
                     <li><img src="TEC.jpg" alt="TECNOLOGIA"></li>
                     <li><img src="Imagenes/ECO.jpg" alt="ECONOMIA"></li>
