Canbios en las imagenes de jpg a png

--- a/Pagina Principal/index.html
+++ b/Pagina Principal/index.html
@@ -128,11 +128,11 @@
             <CENTER>
                 <div class="Animacion">
                   <ul>
-                    <li><img src="CIEN.jpg" alt="CIENCIA"></li>
-                    <li><img src="CUL.png" alt="CULTURA"></li>
-                    <li><img src="ENT.jpg" alt="ENTRETENIMIENTO"></li>
-                    <li><img src="TEC.jpg" alt="TECNOLOGIA"></li>
-                    <li><img src="Imagenes/ECO.jpg" alt="ECONOMIA"></li>
+                    <li><img src="Imagenes/CIEN.png" alt="CIENCIA"></li>
+                    <li><img src="Imagenes/CUL.png" alt="CULTURA"></li>
+                    <li><img src="Imagenes/ENT.png" alt="ENTRETENIMIENTO"></li>
+                    <li><img src="Imagenes/TEC.png" alt="TECNOLOGIA"></li>
+                    <li><img src="Imagenes/ECO.png" alt="ECONOMIA"></li>
                   </ul>
                 </div>
             </CENTER>
