Actualizacion de las imagenes de jpg a png

--- a/PAGINAS/Cultura/TXT/INDEX-C.HTML
+++ b/PAGINAS/Cultura/TXT/INDEX-C.HTML
@@ -5,7 +5,7 @@
 	<BODY>
 
 
-			<img src="css/imagenes/ojo.jpg" alt="000" usemap="#lo" style="position: absolute; top: 640px; left:595px;">
+			<img src="css/imagenes/ojo.png" alt="000" usemap="#lo" style="position: absolute; top: 640px; left:595px;">
 			<map name="lo">
 				<area shape="circle" coords="51,50,86,50" href="DarkBox/DarkBox.html" alt="">
 			</map>
@@ -56,14 +56,14 @@
 	<br>
 
 	<div class="Temas">
-	<img src="css/imagenes/Peliculas.jpg">
-	<img src="css/imagenes/Musica.jpg">
-	<img src="css/imagenes/Teatro.jpg">
+	<img src="css/imagenes/Peliculas.png">
+	<img src="css/imagenes/Musica.png">
+	<img src="css/imagenes/Teatro.png">
 	</div>
 
 	<div class="Temas-r">
-	<img src="css/imagenes/Relatos.jpg">
-	<img src="css/imagenes/Baile.jpg">
+	<img src="css/imagenes/Relatos.png">
+	<img src="css/imagenes/Baile.png">
 	</div>
 
 	<div class="NTemas-r">
