--- a/PAGINAS/Cultura/TXT/MUSICA-C.html
+++ b/PAGINAS/Cultura/TXT/MUSICA-C.html
@@ -41,7 +41,7 @@
 				<img src="css/imagenes/Trailer.png" alt="Trailer">
 			</div>
       <div class="GIF">
-				<img src="css/imagenes/BIB.jpg" alt="DONNI">
+				<img src="css/imagenes/BIB.png" alt="DONNI">
       </div>
 			<div class="Marco1">
 				<a href="R-CINE.HTML"><img src="css/imagenes/Marco2.png" alt="Marco"></a>
