--- a/PAGINAS/Cultura/TXT/R-RELATOS.HTML
+++ b/PAGINAS/Cultura/TXT/R-RELATOS.HTML
@@ -88,7 +88,7 @@
         <br>
         </tr>
         <tr>
-          <td><img src="css/imagenes/v1.jpg"></td><td><img src="css/imagenes/v2.jpg"></td><td><img src="css/imagenes/v3.jpg"></td><td><img src="css/imagenes/v4.jpg"></td><td><img src="css/imagenes/v5.jpg"></td><td><img src="css/imagenes/v6.jpg"></td>
+          <td><img src="css/imagenes/v1.png"></td><td><img src="css/imagenes/v2.jpg"></td><td><img src="css/imagenes/v3.jpg"></td><td><img src="css/imagenes/v4.jpg"></td><td><img src="css/imagenes/v5.jpg"></td><td><img src="css/imagenes/v6.jpg"></td>
         <tr>
           <td>Daveigh Chase</td> <td>Drew Barrymore</td> <td>Jake Gyllenhaal</td> <td>Jena Malone</td> <td>Maggie Gyllenhaal</td> <td>Noah Wyle</td>
         </tr>
