--- a/PAGINAS/Cultura/TXT/R-MUSICA.HTML
+++ b/PAGINAS/Cultura/TXT/R-MUSICA.HTML
@@ -13,8 +13,8 @@
 		<UL>
 			<LI><a href="../../CIENCIA/pagina.html">Ciencia</a>
 			<li><a href="../../ECONOMIA/ECONOMIA.html">Economia</a>
-			<LI><p> Gastronomia
-			<li><p> Tecnologia
+			<LI><p> Gastronomia </p>
+			<li><p> Tecnologia </p>
 				<ul>
 						<li><a href="../../Tecnologia/lo-mas-nuevo.html">LO MÁS NUEVO</a></li>
 						<li><a href="../../Tecnologia/Mejores.html">MEJORES PRODUCTOS</a></li>
