Optimizacion de Imagenes Parte1

--- a/PAGINAS/Cultura/TXT/CINE-C.html
+++ b/PAGINAS/Cultura/TXT/CINE-C.html
@@ -31,7 +31,7 @@
     </center>
     <br>
 		<div class="Marco2">
-			<img src="css/imagenes/Marco.png" alt="Marco1">
+			<img src="https://i.pinimg.com/564x/3c/55/84/3c5584c7d2e45d9f69c55aa07a9031f6.jpg" alt="Marco1">
 		</div>
     <div class="Titulo">
       <h1 size="50px">Donnie Darko</h1>
@@ -44,7 +44,7 @@
 				<img src="css/imagenes/GIF-M.GIF" alt="DONNI">
       </div>
 			<div class="Marco1">
-				<a href="R-CINE.HTML"><img src="css/imagenes/Marco2.png" alt="Marco"></a>
+				<a href="R-CINE.HTML"><img src="https://i.pinimg.com/564x/1b/a4/bc/1ba4bcfe0947aa6a7730d59b63923850.jpg" alt="Marco"></a>
 			</div>
     </CENTER>
 		<div class="Reseña">
