--- a/PAGINAS/Cultura/TXT/index.html
+++ b/PAGINAS/Cultura/TXT/index.html
@@ -56,25 +56,25 @@
 	<br>
 
 	<div class="Temas">
-	<img src="https://i.pinimg.com/564x/be/3e/b3/be3eb3c8754ae5d566eec61632e535d3.jpg">
-	<img src="https://i.pinimg.com/564x/0b/2a/6c/0b2a6c902084c2acd0b178bba55cfc91.jpg">
-	<img src="css/imagenes/Teatro.png">
+	<img src="https://i.pinimg.com/564x/be/3e/b3/be3eb3c8754ae5d566eec61632e535d3.jpg" alt="Peliculas">
+	<img src="https://i.pinimg.com/564x/0b/2a/6c/0b2a6c902084c2acd0b178bba55cfc91.jpg" alt="Musica">
+	<img src="https://i.pinimg.com/564x/18/2d/85/182d8599e2e271144d6c03b854090715.jpg" alt="Teatro">
 	</div>
 
 	<div class="Temas-r">
-	<img src="css/imagenes/Relatos.png">
-	<img src="https://i.pinimg.com/564x/ac/19/c6/ac19c6f55ecf91677860acf27c938662.jpg">
+	<img src="https://i.pinimg.com/564x/63/a2/48/63a248c2b08929f32a2b5734899b9ca3.jpg" alt="Relatos">
+	<img src="https://i.pinimg.com/564x/ac/19/c6/ac19c6f55ecf91677860acf27c938662.jpg" alt="Baile">
 	</div>
 
 	<div class="NTemas-r">
 	<a	href="RELATOS-C.html"><img src="css/imagenes/R.png"></a>
-	<img src="https://i.pinimg.com/564x/ff/a6/92/ffa692cfaad0b3e676813d55f3d005dd.jpg">
+	<img src="css/imagenes/B.png">
 	</div>
 
 	<div class="NTemas">
-	<a	href="CINE-C.html"><img src="https://i.pinimg.com/564x/a5/9d/66/a59d660b4120ebff29dc244a5f262fa9.jpg"></a>
-	<a	href="MUSICA-C.html"><img src="https://i.pinimg.com/564x/83/ad/f9/83adf90ad93a38e94188d7b2323c6b7f.jpg"></a>
-	<img src="https://i.pinimg.com/564x/ea/46/a5/ea46a5124233a7b85d0baff8271a8254.jpg">
+	<a	href="CINE-C.html"><img src="css/imagenes/C.png"></a>
+	<a	href="MUSICA-C.html"><img src="css/imagenes/M.png"></a>
+	<img src="css/imagenes/T.png">
 	</div>
 		</div>
 	</BODY>
