Actualizacion de la optimizaciones Multimedia

--- a/PAGINAS/Cultura/TXT/CINE-C.html
+++ b/PAGINAS/Cultura/TXT/CINE-C.html
@@ -25,7 +25,7 @@
 				</ul>
 			</li>
 			<li><p> Documentos</li>
-			<li><A href="INDEX-C.html"> INICIO </A></li>
+			<li><A href="index.html"> INICIO </A></li>
 		</ul>
 	  </div>
     </center>
@@ -41,10 +41,10 @@
 				<img src="css/imagenes/Trailer.png" alt="Trailer">
 			</div>
       <div class="GIF">
-				<img src="css/imagenes/GIF-M.GIF" alt="DONNI">
+				<img src="https://i.pinimg.com/originals/de/d7/40/ded740248dc8e070219c6b3b5d57c154.gif" alt="DONNI">
       </div>
 			<div class="Marco1">
-				<a href="R-CINE.HTML"><img src="css/imagenes/Marco2.png" alt="Marco"></a>
+				<a href="R-CINE.html"><img src="css/imagenes/Marco2.png" alt="Marco"></a>
 			</div>
     </CENTER>
 		<div class="Reseña">
