--- a/PAGINAS/Cultura/TXT/R-CINE.html
+++ b/PAGINAS/Cultura/TXT/R-CINE.html
@@ -38,8 +38,8 @@
     </div>
     <main>
       <div class="contenedor">
-        <video class="fm-video video-js vjs-16-9 vjs-big-play-centered" data-setup="{}" controls id="fm-video" poster="css/imagenes/DON.GIF">
-          <source src="css/Videos/DO-DA.mp4" type="video/mp4">
+        <video class="fm-video video-js vjs-16-9 vjs-big-play-centered" data-setup="{}" controls id="fm-video" poster="https://i.pinimg.com/564x/19/d8/1f/19d81f99b0cb3118cb9610f2dc465974.jpg">
+          <source src="https://youtu.be/zNEPkcK3SeE" type="video/mp4">
         </video>
       </div>
     </main>
