Actualizacion de la optimizaciones Multimedia v2

--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -56,14 +56,14 @@
 	<br>
 
 	<div class="Temas">
-	<img src="css/imagenes/Peliculas.png">
-	<img src="css/imagenes/Musica.png">
-	<img src="css/imagenes/Teatro.png">
+	<img src="https://i.pinimg.com/564x/be/3e/b3/be3eb3c8754ae5d566eec61632e535d3.jpg" alt="Peliculas">
+	<img src="https://i.pinimg.com/564x/0b/2a/6c/0b2a6c902084c2acd0b178bba55cfc91.jpg" alt="Musica">
+	<img src="https://i.pinimg.com/564x/18/2d/85/182d8599e2e271144d6c03b854090715.jpg" alt="Teatro">
 	</div>
 
 	<div class="Temas-r">
-	<img src="css/imagenes/Relatos.png">
-	<img src="css/imagenes/Baile.png">
+	<img src="https://i.pinimg.com/564x/63/a2/48/63a248c2b08929f32a2b5734899b9ca3.jpg" alt="Relatos">
+	<img src="https://i.pinimg.com/564x/ac/19/c6/ac19c6f55ecf91677860acf27c938662.jpg" alt="Baile">
 	</div>
 
 	<div class="NTemas-r">
