--- a/PAGINAS/Cultura/TXT/R-CINE.html
+++ b/PAGINAS/Cultura/TXT/R-CINE.html
@@ -39,7 +39,7 @@
     <main>
       <div class="contenedor">
         <video class="fm-video video-js vjs-16-9 vjs-big-play-centered" data-setup="{}" controls id="fm-video" poster="https://i.pinimg.com/564x/19/d8/1f/19d81f99b0cb3118cb9610f2dc465974.jpg">
-          <source src="https://youtu.be/zNEPkcK3SeE" type="video/mp4">
+          <source src="https://www.youtube.com/embed/zNEPkcK3SeE" type="video/mp4">
         </video>
       </div>
     </main>
