--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -72,8 +72,8 @@
 	</div>
 
 	<div class="NTemas">
-	<a	href="CINE-C.html"><img src="css/imagenes/C.png"></a>
-	<a	href="MUSICA-C.html"><img src="css/imagenes/M.png"></a>
+	<a	href="CINE-C.html"><img src="https://sn3301files.storage.live.com/y4p-ECqTh-HAOG6rTlRpSQ-iXG4P65ix2_cvv47N_tdsLtEferAofUmkr9cQCsE7iuDCHsDgPBapRMe0WqCzOYo_Lo5GrIvEjujqqMgpGNCtTLyVN1jjkrYzEMPmLjncl1ejKo71QJnYNWTb-bqs1XUHnPaEThwiH39_8_C4g-91oLTv9V_o6qQm4JRKpZBGdc71j6BidfW74d5VeasAzYLq944BIf07UUsUiYbGfhLJcM/C.png?psid=1&width=300&height=500"></a>
+	<a	href="MUSICA-C.html"><img src="https://sn3301files.storage.live.com/y4posQ1R3hcWnTHS6fz8IHW3BfZPtG-OPYxrPzRr0oFGzvaXQ9_HWMzwtMw43gRuH8mu8_SYm-pIqawcrO0WSabam8dmk9df3IhNc7RGWG2kVEzKrqY9l6BImqzTUq0aTwxuYPy56JPLMFzabgvTvMq-JHnf_RZXDHLiz_Tr28OpwNcapXkY_obtul7eBerLIr6q3i3xyNvsAcym_lhrkiNKeb_kiz0Wkxfe15q2iW-r6Q/M.png?psid=1&width=300&height=500"></a>
 	<img src="css/imagenes/T.png">
 	</div>
 		</div>
