--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -72,7 +72,7 @@
 	</div>
 
 	<div class="NTemas">
-	<a	href="CINE-C.html"><img src="https://lpsyow.sn.files.1drv.com/y4m6TQ56nUZrywiWdUucgAEsx0r0o41VFMq9Z_6TuqJ4yY0IlF9Y5yokhda4k0UQ_pmaJwre1jMduOPLLcicHEjhLDy197L5tNzGSBViim-JSBdH6PCnkZpfN5UgTzb68JLrFMTat2rL06qKcyBb8_JjJOvx1kS-0UdYMWHjsNdLxGo8CibOe6yAxqX5xX_SAtFfzZCaZKfM8SAqKQ8Z2hrlA?width=300&height=500&cropmode=none"></a>
+	<a	href="CINE-C.html"><img src="https://drive.google.com/file/d/1hvINTisnJGx1edlLZfDP-yaJVbHLUE48/preview" width="640" height="480"></a>
 	<a	href="MUSICA-C.html"><img src="https://sn3301files.storage.live.com/y4posQ1R3hcWnTHS6fz8IHW3BfZPtG-OPYxrPzRr0oFGzvaXQ9_HWMzwtMw43gRuH8mu8_SYm-pIqawcrO0WSabam8dmk9df3IhNc7RGWG2kVEzKrqY9l6BImqzTUq0aTwxuYPy56JPLMFzabgvTvMq-JHnf_RZXDHLiz_Tr28OpwNcapXkY_obtul7eBerLIr6q3i3xyNvsAcym_lhrkiNKeb_kiz0Wkxfe15q2iW-r6Q/M.png?psid=1&width=300&height=500"></a>
 	<img src="css/imagenes/T.png">
 	</div>
