--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -67,14 +67,14 @@
 	</div>
 
 	<div class="NTemas-r">
-	<a	href="RELATOS-C.html"><img src="css/imagenes/R.png" width="640" height="480"></a>
-	<img src="https://cdn.pixabay.com/photo/2020/05/02/23/12/23-12-56-203_150.png" width="640" height="480">
+	<a	href="RELATOS-C.html"><img src="https://cdn.pixabay.com/photo/2020/05/02/23/47/23-47-29-340_150.png" width="640" height="480" alt="Relatos"></a>
+	<img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/23-44-10-125_150.png" width="640" height="480" alt="Baile">
 	</div>
 
 	<div class="NTemas">
-	<a	href="CINE-C.html"><img src="https://pixabay.com/illustrations/cine-classical-mexico-5123319/" width="640" height="480"></a>
-	<a	href="MUSICA-C.html"><img src="https://cdn.pixabay.com/photo/2020/05/02/23/15/23-15-29-626_150.png" width="640" height="480"></a>
-	<img src="css/imagenes/T.png" width="640" height="480">
+	<a	href="CINE-C.html"><img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/23-44-11-498_150.png" width="640" height="480" alt="Peliculas"></a>
+	<a	href="MUSICA-C.html"><img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/23-44-22-180_150.png" width="640" height="480" alt="Musica"></a>
+	<img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/23-44-34-808_150.png" width="640" height="480" alt="Teatro">
 	</div>
 		</div>
 	</BODY>
