--- a/PAGINAS/Cultura/TXT/R-CINE.html
+++ b/PAGINAS/Cultura/TXT/R-CINE.html
@@ -38,8 +38,8 @@
     </div>
     <main>
       <div class="contenedor">
-        <video class="fm-video video-js vjs-16-9 vjs-big-play-centered" data-setup="{}" controls id="fm-video" poster="https://i.pinimg.com/564x/19/d8/1f/19d81f99b0cb3118cb9610f2dc465974.jpg">
-          <source src="https://www.youtube.com/embed/zNEPkcK3SeE" type="video/mp4">
+        <video class="fm-video video-js vjs-16-9 vjs-big-play-centered" data-setup="{}" controls id="fm-video" poster="https://onedrive.live.com/?cid=4F362405A39D9DB4&id=4F362405A39D9DB4%21125&parId=root&o=OneUp">
+          <source src="https://lpuxxg.sn.files.1drv.com/y4mZnSmzIqeB9u3qi2DdWN3ZUzl43MJC04bP3tXMrJ20Mb3tENmDaUcmvj2FFDa_OBqjlHDcFNB82FBKGSUtr7xLPAundGgeP7G7EjTx5SflKyRz8m2v3nzAqG9IT5A9vweFhDu26YW2A3V01Klc0ElajxP0JPV2K9SOhcp8dzdl5RUC-zjoEU_geIpkLM-Ps3FOFe-82P3Sxa25RnGcNG2ziCKXYSTS-6pRHHW3HJptf4/Do-Da.mp4?psid=1?" type="video/mp4">
         </video>
       </div>
     </main>
@@ -88,7 +88,7 @@
         <br>
         </tr>
         <tr>
-          <td><img src="css/imagenes/v1.png"></td><td><img src="css/imagenes/v2.png"></td><td><img src="css/imagenes/v3.png"></td><td><img src="css/imagenes/v4.png"></td><td><img src="css/imagenes/v5.png"></td><td><img src="css/imagenes/v6.png"></td>
+        <td><img src="https://sn3301files.storage.live.com/y4pDBYc3uBJ0mA858x0Mr6Ia0FV0pSnuoR0h-mBCYTxR4tRw1OfF588MOvBivBPNugqQKUD4YPhKyf5RMC4AHnS3MjcyfD_sYU6BS29GQyAV9K0oBaSSkmhFkxAEK9UVePQySoUBG6JScmCVD0dYO5sRRNkuoPBukJmLVbgCYdLcuySGem5OIY1eHp0Nys9sOQ0rUSCx-fmo5cuZW2yhdjx8VuC6FIVqlN-Fvf6oGxCqC8/ojo.png?psid=1&width=103&height=108"></td><td><img src="https://sn3301files.storage.live.com/y4pO9vwQl9FPIA8wEO33l8TaT4PVrZtMaDunvkdz_1AWwNTtD_-FydpgpPBBZklQby2BeUZdxOTQMkvphChbqpuX7Zb0xLHhAmHwVbvk30N9SbdLmXlgcbeBk7ApSK2MXm7Nh-bryOJzpVCcBmFshMartsrLx1mwpCWBiBfBIOEAmvJFyIr5TBAKXlEBmznEezAh0E_rsVJjAlgtEgAH2heSsRJ37g1CqSqum-IMLowAPw/v2.png?psid=1&width=100&height=120"></td><td><img src="css/imagenes/v3.png"></td><td><img src="css/imagenes/v4.png"></td><td><img src="css/imagenes/v5.png"></td><td><img src="https://sn3301files.storage.live.com/y4pavaIt0Cczd4RXH2w8qcFcOzI72qRya0-2bCVgxAkAFcQHsOKmT3TosdFTfd2s0ryxkCCMnWCIhkbSp08NaSs7BCmUKQ29PkqnctmwfX8JD3Dzw13rQ4gqM6KmYUpmF3-r9sVf1PjELpYk4KWsDYDHJ02IjPClcEbfpo32nz0QcC83dAiOeGIE9DUiIQAc15YhutxGjKITQd3E8shi-pMsBFnK3LPl26Aevj9Q_kt-e8/v6.png?psid=1&width=100&height=120"></td>
         <tr>
           <td>Daveigh Chase</td> <td>Drew Barrymore</td> <td>Jake Gyllenhaal</td> <td>Jena Malone</td> <td>Maggie Gyllenhaal</td> <td>Noah Wyle</td>
         </tr>
@@ -130,7 +130,7 @@
         <br>
         </tr>
         <tr>
-          <td><img src="css/imagenes/v1.png"></td><td><img src="css/imagenes/v2.png"></td><td><img src="css/imagenes/v3.png"></td><td><img src="css/imagenes/v4.png"></td><td><img src="css/imagenes/v5.png"></td><td><img src="css/imagenes/v6.png"></td>
+          <td><img src="https://sn3301files.storage.live.com/y4pDBYc3uBJ0mA858x0Mr6Ia0FV0pSnuoR0h-mBCYTxR4tRw1OfF588MOvBivBPNugqQKUD4YPhKyf5RMC4AHnS3MjcyfD_sYU6BS29GQyAV9K0oBaSSkmhFkxAEK9UVePQySoUBG6JScmCVD0dYO5sRRNkuoPBukJmLVbgCYdLcuySGem5OIY1eHp0Nys9sOQ0rUSCx-fmo5cuZW2yhdjx8VuC6FIVqlN-Fvf6oGxCqC8/ojo.png?psid=1&width=103&height=108"></td><td><img src="https://sn3301files.storage.live.com/y4pO9vwQl9FPIA8wEO33l8TaT4PVrZtMaDunvkdz_1AWwNTtD_-FydpgpPBBZklQby2BeUZdxOTQMkvphChbqpuX7Zb0xLHhAmHwVbvk30N9SbdLmXlgcbeBk7ApSK2MXm7Nh-bryOJzpVCcBmFshMartsrLx1mwpCWBiBfBIOEAmvJFyIr5TBAKXlEBmznEezAh0E_rsVJjAlgtEgAH2heSsRJ37g1CqSqum-IMLowAPw/v2.png?psid=1&width=100&height=120"></td><td><img src="css/imagenes/v3.png"></td><td><img src="css/imagenes/v4.png"></td><td><img src="css/imagenes/v5.png"></td><td><img src="https://sn3301files.storage.live.com/y4pavaIt0Cczd4RXH2w8qcFcOzI72qRya0-2bCVgxAkAFcQHsOKmT3TosdFTfd2s0ryxkCCMnWCIhkbSp08NaSs7BCmUKQ29PkqnctmwfX8JD3Dzw13rQ4gqM6KmYUpmF3-r9sVf1PjELpYk4KWsDYDHJ02IjPClcEbfpo32nz0QcC83dAiOeGIE9DUiIQAc15YhutxGjKITQd3E8shi-pMsBFnK3LPl26Aevj9Q_kt-e8/v6.png?psid=1&width=100&height=120"></td>
         <tr>
           <td>Daveigh Chase</td> <td>Drew Barrymore</td> <td>Jake Gyllenhaal</td> <td>Jena Malone</td> <td>Maggie Gyllenhaal</td> <td>Noah Wyle</td>
         </tr>
