--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -5,7 +5,7 @@
 	<BODY>
 
 
-			<img src="css/imagenes/ojo.png" alt="000" usemap="#lo" style="position: absolute; top: 640px; left:595px;">
+			<img src="https://sn3301files.storage.live.com/y4pDBYc3uBJ0mA858x0Mr6Ia0FV0pSnuoR0h-mBCYTxR4tRw1OfF588MOvBivBPNugqQKUD4YPhKyf5RMC4AHnS3MjcyfD_sYU6BS29GQyAV9K0oBaSSkmhFkxAEK9UVePQySoUBG6JScmCVD0dYO5sRRNkuoPBukJmLVbgCYdLcuySGem5OIY1eHp0Nys9sOQ0rUSCx-fmo5cuZW2yhdjx8VuC6FIVqlN-Fvf6oGxCqC8/ojo.png?psid=1&width=103&height=108" alt="000" usemap="#lo" style="position: absolute; top: 640px; left:595px;">
 			<map name="lo">
 				<area shape="circle" coords="51,50,86,50" href="DarkBox/DarkBox.html" alt="">
 			</map>
