--- a/PAGINAS/Cultura/TXT/CINE-C.html
+++ b/PAGINAS/Cultura/TXT/CINE-C.html
@@ -44,7 +44,7 @@
 				<img src="https://i.pinimg.com/originals/de/d7/40/ded740248dc8e070219c6b3b5d57c154.gif" alt="DONNI">
       </div>
 			<div class="Marco1">
-				<a href="R-CINE.html"><img src="css/imagenes/Marco2.png" alt="Marco"></a>
+				<a href="R-CINE.html"><img src="118.png" alt="Marco"></a>
 			</div>
     </CENTER>
 		<div class="Reseña">
