--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -55,26 +55,17 @@
 	<br>
 	<br>
 
-	<div class="Temas">
-	<img src="https://i.pinimg.com/564x/be/3e/b3/be3eb3c8754ae5d566eec61632e535d3.jpg" alt="Peliculas">
-	<img src="https://i.pinimg.com/564x/0b/2a/6c/0b2a6c902084c2acd0b178bba55cfc91.jpg" alt="Musica">
-	<img src="https://i.pinimg.com/564x/18/2d/85/182d8599e2e271144d6c03b854090715.jpg" alt="Teatro">
-	</div>
 
-	<div class="Temas-r">
-	<img src="https://i.pinimg.com/564x/63/a2/48/63a248c2b08929f32a2b5734899b9ca3.jpg" alt="Relatos">
-	<img src="https://i.pinimg.com/564x/ac/19/c6/ac19c6f55ecf91677860acf27c938662.jpg" alt="Baile">
-	</div>
 
 	<div class="NTemas-r">
-	<a	href="RELATOS-C.html"><img src="https://cdn.pixabay.com/photo/2020/05/02/23/47/23-47-29-340_150.png" width="640" height="480" alt="Relatos"></a>
-	<img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/dance-5123361_960_720.png" width="640" height="480" alt="Baile">
+	<a	href="RELATOS-C.html"><img src="https://i.pinimg.com/564x/5f/b2/5b/5fb25b98b1155bd97f6e6bb27d15db63.jpg"alt="Relatos"></a>
+	<img src="https://i.pinimg.com/564x/83/d6/1f/83d61f194eabf03ed3dd74bffb273006.jpg"alt="Baile">
 	</div>
 
 	<div class="NTemas">
-	<a	href="CINE-C.html"><img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/23-44-11-498_150.png" width="640" height="480" alt="Peliculas"></a>
-	<a	href="MUSICA-C.html"><img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/23-44-22-180_150.png" width="640" height="480" alt="Musica"></a>
-	<img src="https://cdn.pixabay.com/photo/2020/05/02/23/44/23-44-34-808_150.png" width="640" height="480" alt="Teatro">
+	<a	href="CINE-C.html"><img src="https://i.pinimg.com/564x/74/6b/17/746b17dbeed167b0aab9da1d96e91773.jpg"alt="Peliculas"></a>
+	<a	href="MUSICA-C.html"><img src="https://i.pinimg.com/564x/0b/ff/63/0bff636b4a63b6a5a7573a203cc10153.jpg"alt="Musica"></a>
+	<img src="https://i.pinimg.com/564x/32/69/9d/32699de7d4a2f8ad418972727971bde1.jpg"alt="Teatro">
 	</div>
 		</div>
 	</BODY>
