--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -2,8 +2,9 @@
 <HTML LANG="EN">
 	<HEAD><TITLE> CULTURA </TITLE></HEAD>
 	<link rel="stylesheet" type="text/css" href="css/fondo.css">
+	<link rel="stylesheet" href="css/fondo-Res.css">
 	<BODY>
-		
+
 
 			<img src="https://sn3301files.storage.live.com/y4pDBYc3uBJ0mA858x0Mr6Ia0FV0pSnuoR0h-mBCYTxR4tRw1OfF588MOvBivBPNugqQKUD4YPhKyf5RMC4AHnS3MjcyfD_sYU6BS29GQyAV9K0oBaSSkmhFkxAEK9UVePQySoUBG6JScmCVD0dYO5sRRNkuoPBukJmLVbgCYdLcuySGem5OIY1eHp0Nys9sOQ0rUSCx-fmo5cuZW2yhdjx8VuC6FIVqlN-Fvf6oGxCqC8/ojo.png?psid=1&width=103&height=108" alt="000" usemap="#lo" style="position: absolute; top: 640px; left:595px;">
 			<map name="lo">
@@ -13,35 +14,30 @@
 
 
 		<div class="Contenido ">
-
-
-
 		<center>
 		<div class="Navegador">
 		<UL>
-			<LI><a href="../../CIENCIA/pagina.html">Ciencia</a></li>
-			<li><a href="../../ECONOMIA/ECONOMIA.html">Economia</a>
+			<li><a href="../../CIENCIA/pagina.html">Ciencia</a></li>
+			<li><a href="../../ECONOMIA/ECONOMIA.html">Economia</a></li>
 				<UL>
-						<LI><a href="../../ECONOMIA/bolsadevalores.html">BOLSA DE VALORES</a></LI>
-						<LI><a href="../../ECONOMIA/ESTADISTICAS.HTML">ESTADÍSTICAS</a></LI>
+						<li><a href="../../ECONOMIA/bolsadevalores.html">BOLSA DE VALORES</a></li>
+						<li><a href="../../ECONOMIA/ESTADISTICAS.HTML">ESTADÍSTICAS</a></li>
 				</UL>
 			</li>
-			<LI><p> Gastronomia</li>
-			<li><p> Tecnologia
+			<li><p> Gastronomia</li>
+			<li><p> Tecnologia</li>
 				<ul>
 						<li><a href="../../Tecnologia/lo-mas-nuevo.html">LO MÁS NUEVO</a></li>
 						<li><a href="../../Tecnologia/Mejores.html">MEJORES PRODUCTOS</a></li>
 						<li><a href="../../Tecnologia/Noticias.html">NOTICIAS</a></li>
 						<li><a href="../../Tecnologia/Ofertas.html">OFERTAS</a></li>
 				</ul>
-			</li>
 			<Li><p> Entretenimiento
 				<ul>
 					<li> <a href="../../ENTRETENIMIENTO/MUSICA.HTML">Musica</a>  </li>
 					<li> <a href="../../ENTRETENIMIENTO/PELICULAS.HTML">Peliculas</a>  </li>
 					<li> <a href="../../ENTRETENIMIENTO/VIDEOJUEGOS.HTML">VideoJuegos</a>  </li>
 				</ul>
-			</li>
 			<li><a href="../../../Pagina Principal/Pagina principal.html">Inicio</a> </li>
 		</ul>
 	  </div>
