--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -16,30 +16,32 @@
 		<div class="Contenido ">
 		<center>
 		<div class="Navegador">
-		<UL>
-			<li><a href="../../CIENCIA/pagina.html">Ciencia</a></li>
-			<li><a href="../../ECONOMIA/ECONOMIA.html">Economia</a></li>
-				<UL>
-						<li><a href="../../ECONOMIA/bolsadevalores.html">BOLSA DE VALORES</a></li>
-						<li><a href="../../ECONOMIA/ESTADISTICAS.HTML">ESTADÍSTICAS</a></li>
-				</UL>
-			</li>
-			<li><p> Gastronomia</li>
-			<li><p> Tecnologia</li>
-				<ul>
-						<li><a href="../../Tecnologia/lo-mas-nuevo.html">LO MÁS NUEVO</a></li>
-						<li><a href="../../Tecnologia/Mejores.html">MEJORES PRODUCTOS</a></li>
-						<li><a href="../../Tecnologia/Noticias.html">NOTICIAS</a></li>
-						<li><a href="../../Tecnologia/Ofertas.html">OFERTAS</a></li>
-				</ul>
-			<Li><p> Entretenimiento
-				<ul>
-					<li> <a href="../../ENTRETENIMIENTO/MUSICA.HTML">Musica</a>  </li>
-					<li> <a href="../../ENTRETENIMIENTO/PELICULAS.HTML">Peliculas</a>  </li>
-					<li> <a href="../../ENTRETENIMIENTO/VIDEOJUEGOS.HTML">VideoJuegos</a>  </li>
-				</ul>
-			<li><a href="../../../Pagina Principal/Pagina principal.html">Inicio</a> </li>
-		</ul>
+			<UL>
+				<LI><a href="../../CIENCIA/pagina.html">Ciencia</a></li>
+				<li><a href="../../ECONOMIA/ECONOMIA.html">Economia</a>
+					<UL>
+							<LI><a href="../../ECONOMIA/bolsadevalores.html">BOLSA DE VALORES</a></LI>
+							<LI><a href="../../ECONOMIA/ESTADISTICAS.HTML">ESTADÍSTICAS</a></LI>
+					</UL>
+				</li>
+				<LI><p> Gastronomia</li>
+				<li><p> Tecnologia
+					<ul>
+							<li><a href="../../Tecnologia/lo-mas-nuevo.html">LO MÁS NUEVO</a></li>
+							<li><a href="../../Tecnologia/Mejores.html">MEJORES PRODUCTOS</a></li>
+							<li><a href="../../Tecnologia/Noticias.html">NOTICIAS</a></li>
+							<li><a href="../../Tecnologia/Ofertas.html">OFERTAS</a></li>
+					</ul>
+				</li>
+				<Li><p> Entretenimiento
+					<ul>
+						<li> <a href="../../ENTRETENIMIENTO/MUSICA.HTML">Musica</a>  </li>
+						<li> <a href="../../ENTRETENIMIENTO/PELICULAS.HTML">Peliculas</a>  </li>
+						<li> <a href="../../ENTRETENIMIENTO/VIDEOJUEGOS.HTML">VideoJuegos</a>  </li>
+					</ul>
+				</li>
+				<li><a href="../../../Pagina Principal/Pagina principal.html">Inicio</a> </li>
+			</ul>
 	  </div>
 	</center>
 
@@ -55,14 +57,14 @@
 
 
 	<div class="NTemas-r">
-	<a	href="RELATOS-C.html"><img src="https://i.pinimg.com/564x/5f/b2/5b/5fb25b98b1155bd97f6e6bb27d15db63.jpg"alt="Relatos"></a>
-	<img src="https://i.pinimg.com/564x/83/d6/1f/83d61f194eabf03ed3dd74bffb273006.jpg"alt="Baile">
+	<a	href="RELATOS-C.html"><img src="IMG/Relatos.png"alt="Relatos"></a>
+	<img src="IMG/Baile.png"alt="Baile">
 	</div>
 
 	<div class="NTemas">
-	<a	href="CINE-C.html"><img src="https://i.pinimg.com/564x/74/6b/17/746b17dbeed167b0aab9da1d96e91773.jpg"alt="Peliculas"></a>
-	<a	href="MUSICA-C.html"><img src="https://i.pinimg.com/564x/0b/ff/63/0bff636b4a63b6a5a7573a203cc10153.jpg"alt="Musica"></a>
-	<img src="https://i.pinimg.com/564x/32/69/9d/32699de7d4a2f8ad418972727971bde1.jpg"alt="Teatro">
+	<a	href="CINE-C.html"><img src="IMG/Peliculas.png"alt="Peliculas"></a>
+	<a	href="MUSICA-C.html"><img src="IMG/Musica.png"alt="Musica"></a>
+	<img src="IMG/Teatro.png"alt="Teatro">
 	</div>
 		</div>
 	</BODY>
