--- a/PAGINAS/Cultura/TXT/INDEX-C.html
+++ b/PAGINAS/Cultura/TXT/INDEX-C.html
@@ -16,6 +16,7 @@
 		<div class="Contenido ">
 		<center>
 		<div class="Navegador">
+			<h2>MENU</h2>
 			<UL>
 				<LI><a href="../../CIENCIA/pagina.html">Ciencia</a></li>
 				<li><a href="../../ECONOMIA/ECONOMIA.html">Economia</a>
@@ -42,7 +43,8 @@
 				</li>
 				<li><a href="../../../Pagina Principal/Pagina principal.html">Inicio</a> </li>
 			</ul>
-	  </div>
+			<img src="IMG/list.png" alt="">
+		</div>
 	</center>
 
 	<center>
