--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         let x = (eye.getBoundingClientRect().left) + (eye.clientWidth / 2);
         let y = (eye.getBoundingClientRect().top) + (eye.clientHeight / 2);
         let radian = Math.atan2(event.pageX - x,event.pageY - y);
-        let rot = (radian * (180 / Math.PI) * -1) + 270;
+        var rot = (radian * (180 / Math.PI) * -1) + 285;
         eye.style.transform = "rotate("+ rot +"deg)";
       })
     }
