--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
     <div class="Gatos">
       <img src="Ojos-de-Gato.png" alt="Gatos">
     </div>
+    <div class="Expreciones">
+      <div class="Ojo-I">
+        <img>
+      </div>
+      <!--
+      <div class="Ojo-D">
+        <img src="Ojos de Gato2-Cerrados-D" alt="Ojo">
+      </div>
+      <div class="Ojo">
+        <img src="Ojos de Gato2-Cerrados-2" alt="Ojo">
+      </div>
+      -->
+    </div>
+    <div class="Entrar">
+      <a href="Pagina Principal/index.html">Entrar</a>
+    </div>
 </div>
   <script type="text/javascript">
     document.querySelector("body").addEventListener('mousemove', eyeball);
