--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <div class="Entrar">
       <a href="Pagina Principal/index.html">Entrar</a>
     </div>
+    <div class="Comentarios">
+      <a href="formComentarios/Formulario.html">Comentarios</a>
+    </div>
 
 </div>
 <script>
