--- a/formComentarios/Formulario.html
+++ b/formComentarios/Formulario.html
@@ -11,7 +11,7 @@
               <b>Porque tu opinión nos interesa...</b>
           </form>
         </div>
-        <form id="Miform" action="" name="formulario" method="get" class="formulario">
+        <form id="Miform" action="DataBase.php" name="formulario" method="post" class="formulario">
             <h1 class="formulario_titulo">Necesitamos tu opinión o alguna sugerencia para nuestro sitio</h1>
             <div class="TextBox">
               <input type="text" name="nombre" id="nombre" maxlength="60" class="formulario_texto" placeholder="Nombre"><br>
